<resources>
    <string name="app_name">Login Demo</string>
    <string name="click_for_add_new_user">Click For Add New User</string>
    <string name="click_here_for_login">Already Register? Click here for Login</string>
    <string name="click_here_for_register">Not registered?Click here for Register</string>
    <string name="username">Username : </string>
    <string name="mobile_number">Mobile Number : </string>
    <string name="age">Age : </string>
    <string name="gender">Gender : </string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="login">Login</string>
    <string name="mobile_number_text">Mobile Number</string>
    <string name="age_text">Age</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="register_text">Register</string>
    <string name="delete">Delete User</string>
    <string name="edit">Edit</string>
    <string name="logout_user">Logout User</string>
    <string name="please_select_profile_picture">Please select Profile Picture</string>
    <string name="please_fill_password">Please fill Password</string>
    <string name="please_fill_username">Please fill UserName</string>
    <string name="registration_successful">Registration successful</string>
    <string name="please_allow_permission_first">Please allow Permission first</string>
    <string name="user_deleted">User Deleted</string>
    <string name="user_not_deleted">User Not Deleted</string>
    <string name="user_loggedout">User LoggedOut</string>
    <string name="invalid_username_or_password">Invalid username or password.</string>
    <string name="please_fill_in_all_the_fields">Please fill in all the fields</string>
    <string name="login_successful">Login Successful</string>
    <string name="conform">Conform</string>
</resources>